--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,13 @@
   "version": "1.0.0",
   "author": "Cemal Gönültaş",
   "license": "SEE LICENSE IN ../LICENSE",
-	"type": "module",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon -e js --delay 2"
+    "dev": "node index.js"
   },
   "dependencies": {
     "deta": "^1.1.0",
     "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
