--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,11 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon -e js --delay 2 index.js"
   },
   "dependencies": {
     "deta": "^1.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
